Running on k8s cluster - add makefile to manipulate build and lint with flak8 - edited dockerfile with project - add manifest to deploy on k8s

--- a/etc/docker/Dockerfile
+++ b/etc/docker/Dockerfile
@@ -6,7 +6,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 # install necessaries packages
 RUN apt-get update && \
     apt-get install --no-install-recommends -y python3 python3-dev \
-    wget vim ca-certificates \
+    wget ca-certificates \
     libavcodec-dev libavformat-dev libswscale-dev libv4l-dev \
     libgstreamer-plugins-base1.0-dev libgstreamer1.0-dev \ 
     libgtk2.0-dev libatlas-base-dev gfortran \
@@ -22,7 +22,14 @@ RUN wget https://bootstrap.pypa.io/get-pip.py && \
     rm -f get-pip.py
 
 # installing packages on requiments.txt with pip3
-WORKDIR /project
-ADD ./requirements.txt /project/requirements.txt
+WORKDIR /opt/is
+
+COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 RUN rm -f requirements.txt
+
+# copying project
+COPY src/ src
+COPY etc/conf etc/conf
+
+ENTRYPOINT ["python3", "src/service.py"]
