implemented iterations in video

--- a/etc/k8s/deployment.yaml
+++ b/etc/k8s/deployment.yaml
@@ -17,7 +17,8 @@ data:
       "videos": [
           {
               "person_id": 1,
-              "gesture_id": 6
+              "gesture_id": 6,
+              "iterations": 1
           }
       ],
       "loop": true
