--- a/etc/k8s/deployment.yaml
+++ b/etc/k8s/deployment.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mock-cameras
-  namespace: default
+  namespace: orchestrator
 data:
   mock: |-
     {
-      "broker_uri": "amqp://rabbitmq.default",
-      "zipkin_uri": "http://zipkin.default:9411",
+      "broker_uri": "amqp://rabbitmq.orchestrator",
+      "zipkin_uri": "http://zipkin.orchestrator:9411",
       "folder": "/datasets",
       "fps": 9,
       "cameras_id": [
@@ -27,12 +27,12 @@ data:
     }
 
 ---
-apiVersion: extensions/v1beta1
-kind: Deployment
+apiVersion: batch/v1
+kind: Job
 metadata:
   name: "mock-cameras"
+  namespace: orchestrator
 spec:
-  replicas: 1
   template:
     metadata:
       labels:
@@ -54,6 +54,7 @@ spec:
             - mountPath: /datasets
               name: datasets
               readOnly: true
+      restartPolicy: Never
       volumes:
         - name: options
           configMap:
